<resources>
    <string name="app_name">Mareu</string>
    <string name="roomlogo">RoomLogo</string>
    <string name="reunion">Reunion</string>
    <string name="participants">Participants</string>
    <string name="delete_button">delete button</string>
    <string name="sujet">Sujet</string>
    <string name="fin">Fin</string>
    <string name="d_but">Début</string>
    <string name="salle">Salle</string>
    <string name="date_et_heure_de_debut">Date et heure de début</string>
    <string name="date_et_heure_de_fin">Date et heure de fin</string>
    <string name="radiobutton">RadioButton</string>
    <string name="selected_attendees">Pas de participant sélectionné</string>
    <string name="button">Button</string>
    <string name="date">Date</string>
    <string name="starting">Heure de début</string>
    <string name="ending">Heure de fin</string>
    <string name="ajouter">Ajouter</string>
    <string name="enregistrer">enregistrer</string>
    <string name="choose_date">Choisissez une date</string>
    <string name="choose_starting_time">Heure de début</string>
    <string name="choose_ending_time">Heure de fin</string>
    <string name="valider">Valider</string>
    <string name="salle_1">Salle 1</string>
    <string name="salle_2">Salle 2</string>
    <string name="salle_3">Salle 3</string>
    <string name="salle_4">Salle 4</string>
    <string name="salle_5">Salle 5</string>
    <string name="salle_6">Salle 6</string>
    <string name="salle_7">Salle 7</string>
    <string name="salle_8">Salle 8</string>
    <string name="salle_9">Salle 9</string>
    <string name="salle_10">Salle 10</string>
</resources>
