<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="4dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/room_logo"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/roomlogo" />

    <TextView
        android:id="@+id/item_list_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:textStyle="bold"
        android:text="@string/reunion"
        app:layout_constraintStart_toEndOf="@id/room_logo"
        app:layout_constraintTop_toTopOf="@id/room_logo"/>

    <TextView
        android:id="@+id/item_list_participants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/participants"
        app:layout_constraintStart_toEndOf="@id/room_logo"
        app:layout_constraintBottom_toBottomOf="@id/room_logo"/>

    <ImageButton
        android:id="@+id/item_list_delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/room_logo"
        app:layout_constraintBottom_toBottomOf="@id/room_logo"
        app:srcCompat="@drawable/ic_delete_black_24dp"
        android:contentDescription="@string/delete_button" />


</androidx.constraintlayout.widget.ConstraintLayout>